--- a/03-practice.ipynb
+++ b/03-practice.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#how to load MNIST stably?"
+    "#how to load MNIST stably???"
    ]
   },
   {
