--- a/03-practice.ipynb
+++ b/03-practice.ipynb
@@ -1017,8 +1017,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 115,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
