--- a/05_practice.ipynb
+++ b/05_practice.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,217 +136,244 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 9"
+    "# Exercise 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to /Users/sunghoonjung/scikit_learn_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
+    "housing = fetch_california_housing()\n",
+    "X = housing[\"data\"]\n",
+    "y = housing[\"target\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import tarfile\n",
-    "from six.moves import urllib\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "DOWNLOAD_ROOT = \"https://raw.githubusercontent.com/ageron/handson-ml/master/\"\n",
-    "HOUSING_PATH = os.path.join(\"datasets\",\"housing\")\n",
-    "HOUSING_URL = DOWNLOAD_ROOT + \"datasets/housing/housing.tgz\"\n",
-    "\n",
-    "def fetch_housing_data(housing_url=HOUSING_URL, housing_path=HOUSING_PATH):\n",
-    "    if not os.path.isdir(housing_path):\n",
-    "        os.makedirs(housing_path)\n",
-    "    tgz_path = os.path.join(housing_path, \"housing.tgz\")\n",
-    "    urllib.request.urlretrieve(housing_url, tgz_path)\n",
-    "    housing_tgz = tarfile.open(tgz_path)\n",
-    "    housing_tgz.extractall(path=housing_path)\n",
-    "    housing_tgz.close()"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch_housing_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "def load_housing_data(housing_path=HOUSING_PATH):\n",
-    "    csv_path = os.path.join(housing_path, \"housing.csv\")\n",
-    "    return pd.read_csv(csv_path)"
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.fit_transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>housing_median_age</th>\n",
-       "      <th>total_rooms</th>\n",
-       "      <th>total_bedrooms</th>\n",
-       "      <th>population</th>\n",
-       "      <th>households</th>\n",
-       "      <th>median_income</th>\n",
-       "      <th>median_house_value</th>\n",
-       "      <th>ocean_proximity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-122.23</td>\n",
-       "      <td>37.88</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>880.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>322.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>8.3252</td>\n",
-       "      <td>452600.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-122.22</td>\n",
-       "      <td>37.86</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>7099.0</td>\n",
-       "      <td>1106.0</td>\n",
-       "      <td>2401.0</td>\n",
-       "      <td>1138.0</td>\n",
-       "      <td>8.3014</td>\n",
-       "      <td>358500.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-122.24</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1467.0</td>\n",
-       "      <td>190.0</td>\n",
-       "      <td>496.0</td>\n",
-       "      <td>177.0</td>\n",
-       "      <td>7.2574</td>\n",
-       "      <td>352100.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1274.0</td>\n",
-       "      <td>235.0</td>\n",
-       "      <td>558.0</td>\n",
-       "      <td>219.0</td>\n",
-       "      <td>5.6431</td>\n",
-       "      <td>341300.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1627.0</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>259.0</td>\n",
-       "      <td>3.8462</td>\n",
-       "      <td>342200.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>919.0</td>\n",
-       "      <td>213.0</td>\n",
-       "      <td>413.0</td>\n",
-       "      <td>193.0</td>\n",
-       "      <td>4.0368</td>\n",
-       "      <td>269700.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>37.84</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>2535.0</td>\n",
-       "      <td>489.0</td>\n",
-       "      <td>1094.0</td>\n",
-       "      <td>514.0</td>\n",
-       "      <td>3.6591</td>\n",
-       "      <td>299200.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
-       "0    -122.23     37.88                41.0        880.0           129.0   \n",
-       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
-       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
-       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
-       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
-       "5    -122.25     37.85                52.0        919.0           213.0   \n",
-       "6    -122.25     37.84                52.0       2535.0           489.0   \n",
-       "\n",
-       "   population  households  median_income  median_house_value ocean_proximity  \n",
-       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
-       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
-       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
-       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
-       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  \n",
-       "5       413.0       193.0         4.0368            269700.0        NEAR BAY  \n",
-       "6      1094.0       514.0         3.6591            299200.0        NEAR BAY  "
+       "LinearSVR(C=1.0, dual=True, epsilon=0.0, fit_intercept=True,\n",
+       "     intercept_scaling=1.0, loss='epsilon_insensitive', max_iter=1000,\n",
+       "     random_state=42, tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "housing = load_housing_data()\n",
-    "housing.head(7)"
+    "from sklearn.svm import LinearSVR\n",
+    "\n",
+    "lin_svr = LinearSVR(random_state=42)\n",
+    "lin_svr.fit(X_train_scaled,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.976993881287582"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "y_pred = lin_svr.predict(X_train_scaled)\n",
+    "mse = mean_squared_error(y_train,y_pred)\n",
+    "np.sqrt(mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n",
+      "[CV] C=4.745401188473625, gamma=0.07969454818643928 ..................\n",
+      "[CV] ... C=4.745401188473625, gamma=0.07969454818643928, total=   5.5s\n",
+      "[CV] C=4.745401188473625, gamma=0.07969454818643928 ..................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    7.1s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ... C=4.745401188473625, gamma=0.07969454818643928, total=   5.3s\n",
+      "[CV] C=4.745401188473625, gamma=0.07969454818643928 ..................\n",
+      "[CV] ... C=4.745401188473625, gamma=0.07969454818643928, total=   5.6s\n",
+      "[CV] C=8.31993941811405, gamma=0.015751320499779724 ..................\n",
+      "[CV] ... C=8.31993941811405, gamma=0.015751320499779724, total=   5.8s\n",
+      "[CV] C=8.31993941811405, gamma=0.015751320499779724 ..................\n",
+      "[CV] ... C=8.31993941811405, gamma=0.015751320499779724, total=   4.9s\n",
+      "[CV] C=8.31993941811405, gamma=0.015751320499779724 ..................\n",
+      "[CV] ... C=8.31993941811405, gamma=0.015751320499779724, total=   5.0s\n",
+      "[CV] C=2.560186404424365, gamma=0.002051110418843397 .................\n",
+      "[CV] .. C=2.560186404424365, gamma=0.002051110418843397, total=   4.6s\n",
+      "[CV] C=2.560186404424365, gamma=0.002051110418843397 .................\n",
+      "[CV] .. C=2.560186404424365, gamma=0.002051110418843397, total=   4.8s\n",
+      "[CV] C=2.560186404424365, gamma=0.002051110418843397 .................\n",
+      "[CV] .. C=2.560186404424365, gamma=0.002051110418843397, total=   4.7s\n",
+      "[CV] C=1.5808361216819946, gamma=0.05399484409787431 .................\n",
+      "[CV] .. C=1.5808361216819946, gamma=0.05399484409787431, total=   4.7s\n",
+      "[CV] C=1.5808361216819946, gamma=0.05399484409787431 .................\n",
+      "[CV] .. C=1.5808361216819946, gamma=0.05399484409787431, total=   5.4s\n",
+      "[CV] C=1.5808361216819946, gamma=0.05399484409787431 .................\n",
+      "[CV] .. C=1.5808361216819946, gamma=0.05399484409787431, total=   5.4s\n",
+      "[CV] C=7.011150117432088, gamma=0.026070247583707663 .................\n",
+      "[CV] .. C=7.011150117432088, gamma=0.026070247583707663, total=   5.2s\n",
+      "[CV] C=7.011150117432088, gamma=0.026070247583707663 .................\n",
+      "[CV] .. C=7.011150117432088, gamma=0.026070247583707663, total=   5.1s\n",
+      "[CV] C=7.011150117432088, gamma=0.026070247583707663 .................\n",
+      "[CV] .. C=7.011150117432088, gamma=0.026070247583707663, total=   5.1s\n",
+      "[CV] C=1.2058449429580245, gamma=0.0870602087830485 ..................\n",
+      "[CV] ... C=1.2058449429580245, gamma=0.0870602087830485, total=   4.8s\n",
+      "[CV] C=1.2058449429580245, gamma=0.0870602087830485 ..................\n",
+      "[CV] ... C=1.2058449429580245, gamma=0.0870602087830485, total=   5.6s\n",
+      "[CV] C=1.2058449429580245, gamma=0.0870602087830485 ..................\n",
+      "[CV] ... C=1.2058449429580245, gamma=0.0870602087830485, total=   5.0s\n",
+      "[CV] C=9.324426408004218, gamma=0.0026587543983272693 ................\n",
+      "[CV] . C=9.324426408004218, gamma=0.0026587543983272693, total=   4.5s\n",
+      "[CV] C=9.324426408004218, gamma=0.0026587543983272693 ................\n",
+      "[CV] . C=9.324426408004218, gamma=0.0026587543983272693, total=   4.5s\n",
+      "[CV] C=9.324426408004218, gamma=0.0026587543983272693 ................\n",
+      "[CV] . C=9.324426408004218, gamma=0.0026587543983272693, total=   4.4s\n",
+      "[CV] C=2.818249672071006, gamma=0.0023270677083837795 ................\n",
+      "[CV] . C=2.818249672071006, gamma=0.0023270677083837795, total=   4.4s\n",
+      "[CV] C=2.818249672071006, gamma=0.0023270677083837795 ................\n",
+      "[CV] . C=2.818249672071006, gamma=0.0023270677083837795, total=   4.4s\n",
+      "[CV] C=2.818249672071006, gamma=0.0023270677083837795 ................\n",
+      "[CV] . C=2.818249672071006, gamma=0.0023270677083837795, total=   4.4s\n",
+      "[CV] C=4.042422429595377, gamma=0.011207606211860567 .................\n",
+      "[CV] .. C=4.042422429595377, gamma=0.011207606211860567, total=   4.4s\n",
+      "[CV] C=4.042422429595377, gamma=0.011207606211860567 .................\n",
+      "[CV] .. C=4.042422429595377, gamma=0.011207606211860567, total=   4.4s\n",
+      "[CV] C=4.042422429595377, gamma=0.011207606211860567 .................\n",
+      "[CV] .. C=4.042422429595377, gamma=0.011207606211860567, total=   4.5s\n",
+      "[CV] C=5.319450186421157, gamma=0.003823475224675185 .................\n",
+      "[CV] .. C=5.319450186421157, gamma=0.003823475224675185, total=   4.4s\n",
+      "[CV] C=5.319450186421157, gamma=0.003823475224675185 .................\n",
+      "[CV] .. C=5.319450186421157, gamma=0.003823475224675185, total=   4.4s\n",
+      "[CV] C=5.319450186421157, gamma=0.003823475224675185 .................\n",
+      "[CV] .. C=5.319450186421157, gamma=0.003823475224675185, total=   4.4s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  30 out of  30 | elapsed:  3.3min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=None, error_score='raise',\n",
+       "          estimator=SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
+       "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False),\n",
+       "          fit_params=None, iid=True, n_iter=10, n_jobs=1,\n",
+       "          param_distributions={'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x11329d518>, 'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x11329d908>},\n",
+       "          pre_dispatch='2*n_jobs', random_state=42, refit=True,\n",
+       "          return_train_score='warn', scoring=None, verbose=2)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import reciprocal, uniform\n",
+    "\n",
+    "param_distributions = {\"gamma\": reciprocal(0.001, 0.1), \"C\": uniform(1, 10)}\n",
+    "rnd_search_cv = RandomizedSearchCV(SVR(), param_distributions, n_iter=10, verbose=2, random_state=42)\n",
+    "rnd_search_cv.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5727524770785359"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred=rnd_search_cv.best_estimator_.predict(X_train_scaled)\n",
+    "mse=mean_squared_error(y_train,y_pred)\n",
+    "np.sqrt(mse)"
    ]
   },
   {
